# la-porrita

./: .env.example  .gitignore  ADMIN-Excel-Mundial-2026.xlsx  Dockerfile  README.md  cronjob  db.sqlite3  entrypoint.sh  la-porrita-plan.md  main.py  manage.py  pyproject.toml
pool/: admin.py  models.py  urls.py  views.py
pool/management/commands/: auto_sync.py  import_pool_excel.py  recalculate_scores.py  seed_demo_data.py  seed_jcarlos_pool.py  sync_football_data.py
pool/migrations/: 0001_initial.py  0002_alter_apisynclog_options_alter_importlog_options_and_more.py  0003_remove_scoringconfig_diferencia_puntos_and_more.py  0004_scoringconfig_special_predictions_enabled.py  0005_match_last_goals_synced.py  0006_match_thesportsdb_event_id.py  0007_alter_specialprediction_prediction_type.py
pool/services/: excel_importer.py  football_api.py  openfootball.py  scoring.py  thesportsdb.py
porrita/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/pool/: classification.html  dashboard.html  import_excel.html  match_detail.html  matches.html  player_detail.html  recalculate.html  stats.html  sync_api.html
templates/pool/partials/: classification_table.html  matches_list.html  predictions_list.html  special_predictions.html
