[project]
name = "la-porrita"
version = "0.1.0"
description = "Porra Mundial 2026 - Django + HTMX + SQLite + Pandas"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=5.1",
    "django-htmx>=1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "gunicorn>=23.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.8",
]
